mTLS/yaml/spiffe-test-productpage.yaml
apiVersion: v1
kind: Pod
metadata:
  name: spiffe-test-productpage
  namespace: bookinfo
  annotations:
    sidecar.istio.io/inject: "true"
spec:
  serviceAccountName: bookinfo-productpage
  securityContext:
    runAsNonRoot: true
    seccompProfile:
      type: RuntimeDefault
  containers:
  - name: sleep
    image: curlimages/curl:8.6.0
    command: ["sleep","365000"]
    securityContext:
      allowPrivilegeEscalation: false
      capabilities:
        drop: ["ALL"]
