mTLS/yaml/details-allow-only-productpage.yaml
apiVersion: security.istio.io/v1beta1
kind: AuthorizationPolicy
metadata:
  name: details-allow-only-productpage
  namespace: bookinfo
spec:
  selector:
    matchLabels:
      app: details
  action: ALLOW
  rules:
  - from:
    - source:
        principals:
        - "spiffe://cluster.local/ns/bookinfo/sa/bookinfo-productpage"
